# cast

./: .gitignore  Cargo.toml  README.md  dprint.json  petstore.ts
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/swagger_v2/: mod.rs
crates/loader/: Cargo.toml
crates/loader/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
src/: cast.rs  main.rs
